# OPlus_EDL_Toolkit

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/res/: cfg.xml
src-tauri/src/: file_util.rs  gpt_parser.rs  lib.rs  main.rs
src/locales/: en.js  zh_CN.js  zh_TW.js
